app/assets/stylesheets/choice.css.scss
// Place all the styles related to the Choice controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#decision-choices {
	margin-bottom: 30px;
}

#add-choice {
	padding-top: 25px;
	padding-left: 20px;

	#add-choice-button {
		margin-right: 15px;
	}

	#add-choice-form-container {
		display:inline-block;

		#new-choice-submit {
			margin-left:10px;
		}
	}
}

